bugfix: wrap long username in cards

--- a/scss/_off.scss
+++ b/scss/_off.scss
@@ -456,6 +456,7 @@ nav.tab-bar > div {
 p.details {
   color: gray;
   font-size: 0.8em;
+  word-wrap: break-word;
 }
 
 .select2-dropdown.select2-dropdown--below {
